--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>brickOut</title>
+    <style>
+      #gameCanvas {
+        border: 1px solid black;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <canvas id="gameCanvas" width="300" height="500"></canvas>
+    <script type="module" src="app.js"></script>
+  </body>
 </html>
